--- a/vienna_hackaton_controller/pubspec.yaml
+++ b/vienna_hackaton_controller/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   sensors_plus: ^6.0.0
   flutter_svg: ^2.0.10+1
+  vibration: ^1.9.0
 
 dev_dependencies:
   flutter_test:
