replace display app

--- a/vienna_hackaton_display/web/manifest.json
+++ b/vienna_hackaton_display/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "vienna_hackaton_display",
-    "short_name": "vienna_hackaton_display",
+    "name": "oida",
+    "short_name": "oida",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
