--- a/vienna_hackaton_display/linux/CMakeLists.txt
+++ b/vienna_hackaton_display/linux/CMakeLists.txt
@@ -4,10 +4,10 @@ project(runner LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "vienna_hackaton_display")
+set(BINARY_NAME "oida")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "at.vienna.hackaton.display.vienna_hackaton_display")
+set(APPLICATION_ID "com.example.oida")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
