--- a/vienna_hackaton_display/macos/Runner/Configs/AppInfo.xcconfig
+++ b/vienna_hackaton_display/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = vienna_hackaton_display
+PRODUCT_NAME = oida
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = at.vienna.hackaton.display.viennaHackatonDisplay
+PRODUCT_BUNDLE_IDENTIFIER = com.example.oida
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 at.vienna.hackaton.display. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
