--- a/vienna_hackaton_display/windows/CMakeLists.txt
+++ b/vienna_hackaton_display/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(vienna_hackaton_display LANGUAGES CXX)
+project(oida LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "vienna_hackaton_display")
+set(BINARY_NAME "oida")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
